# algorithms

./: CMakeLists.txt  test.cpp
seg_tree/: CMakeLists.txt  segtree.h  test.cpp
st/: CMakeLists.txt  st.h  test.cpp
